--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "single_cell_toolkit"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Gert Hulselmans <gert.hulselmans@kuleuven.be>"]
 edition = "2021"
 
@@ -10,12 +10,13 @@ edition = "2021"
 rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"]  }
 bio-types = "1.0"
 itoa = "1.0"
-grep-cli = "0.1.9"
-termcolor = "1.2.0"
-libz-sys = { version = "1.1.12", default = false, features = ["zlib-ng", "static"] }
+grep-cli = "0.1.10"
+itertools = "0.12"
+termcolor = "1.4.1"
+libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
 needletail = "0.5.1"
-rayon = "1.7"
-csv = "1.2.2"
+rayon = "1.8"
+csv = "1.3.0"
 serde = { version = "1", features = ["derive"] }
 
 [profile.dev.package."*"]
