--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,17 +7,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"]  }
 bio-types = "1.0"
-itoa = "1.0"
+clap = { version = "4.4.18", features = ["derive"] }
+csv = "1.3.0"
 grep-cli = "0.1.10"
 itertools = "0.12"
-termcolor = "1.4.1"
+itoa = "1.0"
 libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
 needletail = "0.5.1"
 rayon = "1.8"
-csv = "1.3.0"
+rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"] }
 serde = { version = "1", features = ["derive"] }
+termcolor = "1.4.1"
 
 [profile.dev.package."*"]
 opt-level = 3
