--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ahash = "0.8.7"
 bio-types = "1.0"
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 grep-cli = "0.1.10"
+hashbrown = "0.14.3"
 itertools = "0.12"
 itoa = "1.0"
 libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
