--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,11 +12,12 @@ bio-types = "1.0"
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 grep-cli = "0.1.10"
-hashbrown = "0.14.3"
+hashbrown = { version = "0.14.3", features = ["rayon"] }
 itertools = "0.12"
 itoa = "1.0"
 libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
 needletail = "0.5.1"
+num-iter = "0.1.44"
 rayon = "1.8"
 rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"] }
 serde = { version = "1", features = ["derive"] }
