--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 ahash = "0.8.7"
 bio-types = "1.0"
+bstr = "1.9.1"
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 grep-cli = "0.1.10"
@@ -17,9 +18,12 @@ itertools = "0.12"
 itoa = "1.0"
 libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
 needletail = "0.5.1"
+noodles = { version = "0.66.0", features = ["async", "bam", "bgzf", "sam"] }
+noodles-bgzf = { version = "0.27.0", features = ["libdeflate"] }
 num-iter = "0.1.44"
 rayon = "1.8"
-rust-htslib = { version = "*", default-features = true, features = ["bzip2", "lzma", "curl", "libdeflate"] }
+# rust-htslib = { version = "*", default-features = false, features = ["libdeflate"] }
+rust-htslib = { version = "*", default-features = false }
 serde = { version = "1", features = ["derive"] }
 termcolor = "1.4.1"
 
