--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,21 +7,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ahash = "0.8.7"
+ahash = "0.8.11"
 bio-types = "1.0"
-bstr = "1.9.1"
-clap = { version = "4.4.18", features = ["derive"] }
-csv = "1.3.0"
-grep-cli = "0.1.10"
-hashbrown = { version = "0.14.3", features = ["rayon"] }
-itertools = "0.12"
+bstr = "1.11.0"
+clap = { version = "4.5.23", features = ["derive"] }
+csv = "1.3.1"
+grep-cli = "0.1.11"
+hashbrown = { version = "0.15.2", features = ["rayon"] }
+itertools = "0.13"
 itoa = "1.0"
-libz-sys = { version = "1.1.14", default = false, features = ["zlib-ng", "static"] }
-needletail = "0.5.1"
+libz-sys = { version = "1.1.20", default = false, features = ["zlib-ng", "static"] }
+needletail = { version = "0.6.1", default-features = false, features = ["bzip2", "flate2", "zstd"] }
 noodles = { version = "0.66.0", features = ["async", "bam", "bgzf", "sam"] }
 noodles-bgzf = { version = "0.27.0", features = ["libdeflate"] }
-num-iter = "0.1.44"
-rayon = "1.8"
+num-iter = "0.1.45"
+rayon = "1.10"
 # rust-htslib = { version = "*", default-features = false, features = ["libdeflate"] }
 rust-htslib = { version = "*", default-features = false }
 serde = { version = "1", features = ["derive"] }
