--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,12 +18,11 @@ itertools = "0.13"
 itoa = "1.0"
 libz-sys = { version = "1.1.20", default = false, features = ["zlib-ng", "static"] }
 needletail = { version = "0.6.1", default-features = false, features = ["bzip2", "flate2", "zstd"] }
-noodles = { version = "0.66.0", features = ["async", "bam", "bgzf", "sam"] }
-noodles-bgzf = { version = "0.27.0", features = ["libdeflate"] }
+noodles = { version = "0.85.0", features = ["async", "bam", "bgzf", "cram", "fasta", "sam"] }
+noodles-bgzf = { version = "0.33.0", features = ["libdeflate"] }
 num-iter = "0.1.45"
 rayon = "1.10"
-# rust-htslib = { version = "*", default-features = false, features = ["libdeflate"] }
-rust-htslib = { version = "*", default-features = false }
+rust-htslib = { version = "*", default-features = false, features = ["libdeflate"] }
 serde = { version = "1", features = ["derive"] }
 termcolor = "1.4.1"
 
