--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,22 +9,24 @@ edition = "2021"
 [dependencies]
 ahash = "0.8.11"
 bio-types = "1.0"
-bstr = "1.11.0"
-clap = { version = "4.5.23", features = ["derive"] }
+bstr = "1.12.0"
+clap = { version = "4.5.40", features = ["derive"] }
 csv = "1.3.1"
 grep-cli = "0.1.11"
 hashbrown = { version = "0.15.2", features = ["rayon"] }
-itertools = "0.13"
+itertools = "0.14"
 itoa = "1.0"
 libz-sys = { version = "1.1.20", default = false, features = ["zlib-ng", "static"] }
 needletail = { version = "0.6.1", default-features = false, features = ["bzip2", "flate2", "zstd"] }
-noodles = { version = "0.85.0", features = ["async", "bam", "bgzf", "cram", "fasta", "sam"] }
-noodles-bgzf = { version = "0.33.0", features = ["libdeflate"] }
+noodles = { version = "0.99.0", features = ["async", "bam", "bgzf", "cram", "fasta", "sam"] }
+noodles-bgzf = { version = "0.41.0", features = ["libdeflate"] }
 num-iter = "0.1.45"
 rayon = "1.10"
 rust-htslib = { version = "*", default-features = false, features = ["libdeflate"] }
 serde = { version = "1", features = ["derive"] }
+tar = "0.4"
 termcolor = "1.4.1"
+libdeflater = "1.24.0"
 
 [profile.dev.package."*"]
 opt-level = 3
